tests/generics/sum_type_nonexhaustive.diag
sum_type_nonexhaustive.ax:4:5: error: non-exhaustive match: missing [Triangle]
